#大版本更为3；#把reconnectDevice()-》【先弹出设备连接窗口，如果没有连接，则直接关闭本窗体】抽象出来；#其余细节更新；

--- a/LightController/MyForm/OtherTools/ToolsForm.resx
+++ b/LightController/MyForm/OtherTools/ToolsForm.resx
@@ -120,6 +120,12 @@
   <metadata name="ccStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>28, 25</value>
   </metadata>
+  <metadata name="ccStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>28, 25</value>
+  </metadata>
+  <metadata name="lcStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>156, 25</value>
+  </metadata>
   <metadata name="lcStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>156, 25</value>
   </metadata>
@@ -130,95 +136,98 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAK
-        FAAAAk1TRnQBSQFMAgEBAwIAAQQBAAEEASgBAAEoAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
-        AaADAAEoAwABAQEAAQgGAAEZGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
-        AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
-        AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
-        AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
-        AgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFm
-        AgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEz
-        AQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFm
-        AgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFm
-        AQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEA
-        ATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFm
-        AQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFm
-        ATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFm
-        AQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEA
-        AWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZ
-        AQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEz
-        AQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/
-        AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEA
-        AZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHM
-        AQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFm
-        ATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZ
-        AQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/
-        ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHM
-        ATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJm
-        AQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHM
-        AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
-        AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
-        ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
-        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA///AFIACfQfAAn0bAAC9AHz
-        AfIB8AK8AQcCvAHxAfIB8wL0GQAC9AHzAfIB8AK8AQcCvAHxAfIB8wL0ZwAC9AHyAgcB9wEHBPABvAEH
-        AfcCvAHzAvQVAAL0AfICBwH3AQcE8AG8AQcB9wK8AfMC9GQAAf8B8wG8AfcBBwHxAfAB8gXzAfEB8AHx
-        Au8BvAH0Af8TAAH/AfMBvAH3AQcB8QHwAfIF8wHxAfAB8QLvAbwB9AH/YgAB9AHxAfcB7wHyA/MB8AHv
-        ApIB9wEHAfIC8wHyAfAB7wEHAfIB/xEAAfQB8QH3Ae8B8gPzAfAB7wKSAfcBBwHyAvMB8gHwAe8BBwHy
-        Af9gAAH/AfABkgEHAvMB8gGSAW0BEwUUARIB6wHvAfIC8wHvAfcB8gH/DwAB/wHwAZIBBwLzAfIBkgFt
-        B0UB6wHvA/MB7wH3AfIB/10AAf8B9AHwAfcB8AHzAfEBkgHqARQBEgZtAeoBEgETAW0BBwHyAfMB7wH3
-        AfIB/wwAAf8B9AHwAfcB8AHzAfEB9wJFAkYFbwJGAUUB6wEHAfIB8wHvAfcB8gH/XAAB9AHwAfcB8AHz
-        AbwB7AETARICbQfsAW0B6gETARIBkgHxAfMB7wGSAfIB/wsAAfQB8AH3AfAB8wG8AewBRQFGAWkCbwXj
-        Am8CRgFFAe0B8QHzAe8BkgHyAf9aAAH0AfIBkgHwAfMBvAHrARQBEwJtCOwB6wFtAeoCFAHsAfEB8wLv
-        AvQJAAH0AfIBkgHwAfMBvAFuAUUBRgFMA+MFFgPjAkYBRQHtAfEB8wLvAvRYAAL0Ae8BBwHzAfEB6wFD
-        ARQB6gJtCOsDbQETAkMB7QLyAfcBvAH0CAAC9AHvAQcB8wHwAW4BHwFGAUcBFwvjARcBRgElAUUBkgLy
-        AfcBvAH0WAAB9AHxAe8B8gHzAZIBEQEQARUBEgxtAeoBEwFDAQ8BQwHvAfMBvAGSAfMB9AcAAfQB8QHv
-        AfIB8wGSAQEBHwEgD0cBIAEfAUUB7wHzAbwBkgHzAfRXAAH0Ae8BvAHzAbwBQwEPARABQwEUARMLEgIU
-        AREBDwEOAeoC8gH3AbwB9AcAAfQB7wG8AfMBvAFEAR8BIBD5AiABHwHqAfMB8gH3AbwB9FYAAfQB8gH3
-        AfAB8wHsAQABDgEPARABQw0VAREBEAEPAg4BBwHzAbwB9wHzBgAB9AHyAfcB8AHzAewBAQEfASAR+QEg
-        AR8BAQHvAfMBvAH3AfMKABv/MQAB9AHwAbwC8gFDAgABDgEPAhALEQIQAQ8BDgIAAW0B8wHwAe0B8gH0
-        BQAB9AHwAbwC8gFEAR8BIBL5AiABAQFtAfMB8AHtAfIB9AcAAv8BGhnjAZQB9AH/LwAB9AHvAQcB8wHv
-        BAACDgMPBhAEDwIOAwABEAHyAfEB7wHwAfQFAAH0Ae8BBwHzAe8BAQEfASAT+QEgAR8BRAHyAfEB7wHw
-        AfQGAAH/AfMBRwImGCwCJgEaAf8uAAH0AfcBBwHzAe0EAAMOAQ8JEAMOBAABDgEHAfMCBwH0BQAB9AH3
-        AQcB8wHtAQEBHwEgE/kBIAEfAQEBBwHzAgcB9AYAAf8BRxssAZoBUwEmAfMuAAH0Ae8BBwHzAewGAAEO
-        ChABDwEOBgAB9wHzAQcB7wH0BQAB9AHvAQcB8wHsAQECIBP5ASABHwEBAfcB8wEHAe8B9AUAAf8BGgQs
-        GDIBUwF6AU0BdQH/LQAB9AHvAQcB8wHrBQABDgERC0MBEQEOBQAB9wHzAQcB7wH0BQAB9AHvAQcB8wHr
-        AQECIBP5ASABHwEBAfcB8wEHAe8B9AUAAf8BlAIsHDIBUwFNAf8tAAH0Ae8BBwHzAewFAAERDRQBEAUA
-        AfcB8wEHAe8B9AUAAfQB7wEHAfMB6wEBAiAT+QEgAR8BAQH3AfMBBwHvAfQFAAH/AXUCLBsyAiwBTQH/
-        LQAB9AHvAQcB8wHtBAABDwETDeoBFQEOBAAB7wHzAgcB9AUAAfQB7wEHAfMB7AEBAiAC+Q9HAvkBIAEf
-        AQEB7wHzAgcB9AUAAf8BlAFTHDICLAFTAf8tAAH0Ae8BBwHzAfcEAAFDDm0B6gEQAwABDwHwAfMCvAH0
-        BQAB9AHvAQcB8wH3AQEBHwEgAfkBRw8XAvkBIAEfAUQB8AHzArwB9AUAAf8BGgJTGzICLAF1Af8tAAH0
-        AbwBBwHzAfEBDwMAARQO7AHrAUMDAAHqAfMB8QHvAfIB9AUAAfQBvAEHAfMB8QEBAR8BIAH5AUcP4wFH
-        AiABAQESAfMB8QHvAfIB9AYAAf8BUwEaAVMZMgMsAfMuAAH0AfIB7wHxAfMB6wMAARQO7QHsAUMDAAGS
-        AfMBvAGSAfMGAAH0AfIB7wHxAfMB6wEBAiABRw8WAUcBIAEfAQEBkgHzAbwBkgHzBwAB/wEbAXUBGgGa
-        GiwBGgH/LwAB8wH3AbwB8wEHARACAAEUAZIN9wHsAQ8CAAEVAfIB8wG8AQcB9AcAAfMB9wG8AfMBBwEB
-        AR8BIAFHARYNlAHjAiABHwFEAfIB8wG8AQcB9AgAAf8B9AGaAXUXUwF1AZoB8wH/MAAB9AG8AQcB8gHz
-        AewBDgEAAQ8B7AEHDO8BbQIAAQ8BkgHzAfIB9wHyAfQHAAH0AbwBBwHyAfMB6wEBAR8BIAEWDZQB4wEg
-        AR8BRAH3AfMB8gH3AfIB9AkAHP8yAAL0Ae8B8AHzAbwBEwIAAW0BBwu8Ae8BFAEAAQ4B6wHxAfMBvAHv
-        AfQIAAL0Ae8B8AHzAbwBRAEBASAB4wy9AZQBRgEfAQEB7AHxAfMBvAHvAfRZAAH0AfEBkgLyAe8BFQEA
-        ARAB9wrxAfABbQEAAQ4BbQG8AvMB7wHzAfQJAAH0AfEBkgLyAe8BRQEBAekBlAu9AW8BHwEBAW4BvALz
-        Ae8B8wH0WQAB/wH0AQcB7wHzAfIB7wETAQ4BEAHvCPIB8wHrAg4BbQEHAfMB/wGSAfEB/woAAf8B9AEH
-        Ae8B8wHyAe8BRAEBAUUBGgn0AW8B6QEBAW4BvAHzAf8BkgHxAf9bAAH/AfQCBwHzAfIBvAHsARABDwES
-        AfMB/wL0Av8B8AFDAQ4BQwGSAfEB8wH/AfcB8AH0DAAB/wH0AgcB8wHyAbwB6wIBAUUB9AX/ARoB6QEB
-        AUQBkgHxAfMB/wH3AfAB9F4AAf8CBwPzAQcB6wEPAQABEQFtAesB6gEOAQABQwHsAbwC8wH0AfcB8AH/
-        DwAB/wIHA/MBBwHrAR4BAQFFAm8BRQIBAUQB7AG8AvMB9AH3AfAB/2AAAfQBvAHvBPMB8QH3AuwB6wLs
-        Ae8B8gPzAfIB7wHwAf8RAAH0AbwB7wTzAfEB9wHsAusC7AHvAfID8wHyAe8B8AH/YQAB/wH0AfEBvALx
-        C/MB8QHwAQcB8gH0Af8RAAH/AfQB8QG8AvEL8wHxAfABBwHyAfQB/2IAAf8C9AHwAbwB8gG8AfAB8gPz
-        AfEBvAHxAfIBBwHxAvQUAAH/AvQB8AG8AfIBvAHwAfID8wHyAbwB8QHyAQcB8QL0ZgAC9AHzAfIB8AG8
-        AfED8gHxAQcB8AHyA/QXAAL0AfMB8gHwAbwB8QLzAfIB8QEHAfAB8gP0agAL9B0AC/T/AP8AQAABQgFN
-        AT4HAAE+AwABKAMAAaADAAEoAwABAQEAAQEFAAEgAQMWAAP/AQAP/wUAD/8FAAL/AQABfwP/AQABfwb/
-        BQAB/wH4AQABDwL/AfgBAAEPBv8FAAH/AeABAAEDAv8B4AEAAQMG/wUAAf8BwAEAAQEC/wHAAQABAQb/
-        BQAB/wGAAgAC/wGAAgAG/wUAAf8DAAF/Af8DAAF/Bf8FAAH8AwABPwH8AwABPwX/BQAB/AMAAR8B/AMA
-        AR8F/wUAAfgDAAEPAfgDAAEPBf8FAAHwAwABDwHwAwABDwX/BQAB8AMAAQcB8AMAAQcF/wUAAfADAAEH
-        AfADAAEHBf8FAAHgAwABBwHgAwABBwH+AwABPwUAAeADAAEDAeADAAEDAfgDAAEPBQAB4AMAAQMB4AMA
-        AQMB8AMAAQcFAAHgAwABAwHgAwABAwHwAwABBwUAAeADAAEDAeADAAEDAeADAAEDBQAB4AMAAQMB4AMA
-        AQMB4AMAAQMFAAHgAwABAwHgAwABAwHgAwABAwUAAeADAAEDAeADAAEDAeADAAEDBQAB4AMAAQMB4AMA
-        AQMB4AMAAQMFAAHgAwABAwHgAwABAwHwAwABBwUAAeADAAEHAeADAAEHAfADAAEHBQAB8AMAAQcB8AMA
-        AQcB+AMAAQ8FAAHwAwABBwHwAwABBwH8AwABPwUAAfADAAEPAfADAAEPBf8FAAH4AwABDwH4AwABDwX/
-        BQAB+AMAAR8B+AMAAR8F/wUAAfwDAAE/AfwDAAE/Bf8FAAH/AwABfwH/AwABfwX/BQAB/wGAAgAC/wGA
-        AgAG/wUAAf8BgAIAAv8BgAIABv8FAAH/AcABAAEDAv8BwAEAAQMG/wUAAf8B8AEAAQcC/wHwAQABBwb/
-        BQAB/wH+AQABPwL/Af4BAAE/Bv8FAA//BQAP/wUAD/8FAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAM
+        FAAAAk1TRnQBSQFMAgEBAwEAARABBAEQAQQBKAEAASgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABoAMAASgDAAEBAQABCAYAARkYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8AUgAJ9B8ACfRsAAL0
+        AfMB8gHwArwBBwK8AfEB8gHzAvQZAAL0AfMB8gHwArwBBwK8AfEB8gHzAvRnAAL0AfICBwH3AQcE8AG8
+        AQcB9wK8AfMC9BUAAvQB8gIHAfcBBwTwAbwBBwH3ArwB8wL0ZAAB/wHzAbwB9wEHAfEB8AHyBfMB8QHw
+        AfEC7wG8AfQB/xMAAf8B8wG8AfcBBwHxAfAB8gXzAfEB8AHxAu8BvAH0Af9iAAH0AfEB9wHvAfID8wHw
+        Ae8CkgH3AQcB8gLzAfIB8AHvAQcB8gH/EQAB9AHxAfcB7wHyA/MB8AHvApIB9wEHAfIC8wHyAfAB7wEH
+        AfIB/2AAAf8B8AGSAQcC8wHyAZIBbQETBRQBEgHrAe8B8gLzAe8B9wHyAf8PAAH/AfABkgEHAvMB8gGS
+        AW0HRQHrAe8D8wHvAfcB8gH/XQAB/wH0AfAB9wHwAfMB8QGSAeoBFAESBm0B6gESARMBbQEHAfIB8wHv
+        AfcB8gH/DAAB/wH0AfAB9wHwAfMB8QH3AkUCRgVvAkYBRQHrAQcB8gHzAe8B9wHyAf9cAAH0AfAB9wHw
+        AfMBvAHsARMBEgJtB+wBbQHqARMBEgGSAfEB8wHvAZIB8gH/CwAB9AHwAfcB8AHzAbwB7AFFAUYBaQJv
+        BeMCbwJGAUUB7QHxAfMB7wGSAfIB/1oAAfQB8gGSAfAB8wG8AesBFAETAm0I7AHrAW0B6gIUAewB8QHz
+        Au8C9AkAAfQB8gGSAfAB8wG8AW4BRQFGAUwD4wUWA+MCRgFFAe0B8QHzAu8C9FgAAvQB7wEHAfMB8QHr
+        AUMBFAHqAm0I6wNtARMCQwHtAvIB9wG8AfQIAAL0Ae8BBwHzAfABbgEfAUYBRwEXC+MBFwFGASUBRQGS
+        AvIB9wG8AfRYAAH0AfEB7wHyAfMBkgERARABFQESDG0B6gETAUMBDwFDAe8B8wG8AZIB8wH0BwAB9AHx
+        Ae8B8gHzAZIBAQEfASAPRwEgAR8BRQHvAfMBvAGSAfMB9FcAAfQB7wG8AfMBvAFDAQ8BEAFDARQBEwsS
+        AhQBEQEPAQ4B6gLyAfcBvAH0BwAB9AHvAbwB8wG8AUQBHwEgEPkCIAEfAeoB8wHyAfcBvAH0VgAB9AHy
+        AfcB8AHzAewBAAEOAQ8BEAFDDRUBEQEQAQ8CDgEHAfMBvAH3AfMGAAH0AfIB9wHwAfMB7AEBAR8BIBH5
+        ASABHwEBAe8B8wG8AfcB8woAG/8xAAH0AfABvALyAUMCAAEOAQ8CEAsRAhABDwEOAgABbQHzAfAB7QHy
+        AfQFAAH0AfABvALyAUQBHwEgEvkCIAEBAW0B8wHwAe0B8gH0BwAC/wEaGeMBlAH0Af8vAAH0Ae8BBwHz
+        Ae8EAAIOAw8GEAQPAg4DAAEQAfIB8QHvAfAB9AUAAfQB7wEHAfMB7wEBAR8BIBP5ASABHwFEAfIB8QHv
+        AfAB9AYAAf8B8wFHAiYYLAImARoB/y4AAfQB9wEHAfMB7QQAAw4BDwkQAw4EAAEOAQcB8wIHAfQFAAH0
+        AfcBBwHzAe0BAQEfASAT+QEgAR8BAQEHAfMCBwH0BgAB/wFHGywBmgFTASYB8y4AAfQB7wEHAfMB7AYA
+        AQ4KEAEPAQ4GAAH3AfMBBwHvAfQFAAH0Ae8BBwHzAewBAQIgE/kBIAEfAQEB9wHzAQcB7wH0BQAB/wEa
+        BCwYMgFTAXoBTQF1Af8tAAH0Ae8BBwHzAesFAAEOARELQwERAQ4FAAH3AfMBBwHvAfQFAAH0Ae8BBwHz
+        AesBAQIgE/kBIAEfAQEB9wHzAQcB7wH0BQAB/wGUAiwcMgFTAU0B/y0AAfQB7wEHAfMB7AUAARENFAEQ
+        BQAB9wHzAQcB7wH0BQAB9AHvAQcB8wHrAQECIBP5ASABHwEBAfcB8wEHAe8B9AUAAf8BdQIsGzICLAFN
+        Af8tAAH0Ae8BBwHzAe0EAAEPARMN6gEVAQ4EAAHvAfMCBwH0BQAB9AHvAQcB8wHsAQECIAL5D0cC+QEg
+        AR8BAQHvAfMCBwH0BQAB/wGUAVMcMgIsAVMB/y0AAfQB7wEHAfMB9wQAAUMObQHqARADAAEPAfAB8wK8
+        AfQFAAH0Ae8BBwHzAfcBAQEfASAB+QFHDxcC+QEgAR8BRAHwAfMCvAH0BQAB/wEaAlMbMgIsAXUB/y0A
+        AfQBvAEHAfMB8QEPAwABFA7sAesBQwMAAeoB8wHxAe8B8gH0BQAB9AG8AQcB8wHxAQEBHwEgAfkBRw/j
+        AUcCIAEBARIB8wHxAe8B8gH0BgAB/wFTARoBUxkyAywB8y4AAfQB8gHvAfEB8wHrAwABFA7tAewBQwMA
+        AZIB8wG8AZIB8wYAAfQB8gHvAfEB8wHrAQECIAFHDxYBRwEgAR8BAQGSAfMBvAGSAfMHAAH/ARsBdQEa
+        AZoaLAEaAf8vAAHzAfcBvAHzAQcBEAIAARQBkg33AewBDwIAARUB8gHzAbwBBwH0BwAB8wH3AbwB8wEH
+        AQEBHwEgAUcBFg2UAeMCIAEfAUQB8gHzAbwBBwH0CAAB/wH0AZoBdRdTAXUBmgHzAf8wAAH0AbwBBwHy
+        AfMB7AEOAQABDwHsAQcM7wFtAgABDwGSAfMB8gH3AfIB9AcAAfQBvAEHAfIB8wHrAQEBHwEgARYNlAHj
+        ASABHwFEAfcB8wHyAfcB8gH0CQAc/zIAAvQB7wHwAfMBvAETAgABbQEHC7wB7wEUAQABDgHrAfEB8wG8
+        Ae8B9AgAAvQB7wHwAfMBvAFEAQEBIAHjDL0BlAFGAR8BAQHsAfEB8wG8Ae8B9FkAAfQB8QGSAvIB7wEV
+        AQABEAH3CvEB8AFtAQABDgFtAbwC8wHvAfMB9AkAAfQB8QGSAvIB7wFFAQEB6QGUC70BbwEfAQEBbgG8
+        AvMB7wHzAfRZAAH/AfQBBwHvAfMB8gHvARMBDgEQAe8I8gHzAesCDgFtAQcB8wH/AZIB8QH/CgAB/wH0
+        AQcB7wHzAfIB7wFEAQEBRQEaCfQBbwHpAQEBbgG8AfMB/wGSAfEB/1sAAf8B9AIHAfMB8gG8AewBEAEP
+        ARIB8wH/AvQC/wHwAUMBDgFDAZIB8QHzAf8B9wHwAfQMAAH/AfQCBwHzAfIBvAHrAgEBRQH0Bf8BGgHp
+        AQEBRAGSAfEB8wH/AfcB8AH0XgAB/wIHA/MBBwHrAQ8BAAERAW0B6wHqAQ4BAAFDAewBvALzAfQB9wHw
+        Af8PAAH/AgcD8wEHAesBHgEBAUUCbwFFAgEBRAHsAbwC8wH0AfcB8AH/YAAB9AG8Ae8E8wHxAfcC7AHr
+        AuwB7wHyA/MB8gHvAfAB/xEAAfQBvAHvBPMB8QH3AewC6wLsAe8B8gPzAfIB7wHwAf9hAAH/AfQB8QG8
+        AvEL8wHxAfABBwHyAfQB/xEAAf8B9AHxAbwC8QvzAfEB8AEHAfIB9AH/YgAB/wL0AfABvAHyAbwB8AHy
+        A/MB8QG8AfEB8gEHAfEC9BQAAf8C9AHwAbwB8gG8AfAB8gPzAfIBvAHxAfIBBwHxAvRmAAL0AfMB8gHw
+        AbwB8QPyAfEBBwHwAfID9BcAAvQB8wHyAfABvAHxAvMB8gHxAQcB8AHyA/RqAAv0HQAL9P8A/wBAAAFC
+        AU0BPgcAAT4DAAEoAwABoAMAASgDAAEBAQABAQUAASABAxYAA/8BAA//BQAP/wUAAv8BAAF/A/8BAAF/
+        Bv8FAAH/AfgBAAEPAv8B+AEAAQ8G/wUAAf8B4AEAAQMC/wHgAQABAwb/BQAB/wHAAQABAQL/AcABAAEB
+        Bv8FAAH/AYACAAL/AYACAAb/BQAB/wMAAX8B/wMAAX8F/wUAAfwDAAE/AfwDAAE/Bf8FAAH8AwABHwH8
+        AwABHwX/BQAB+AMAAQ8B+AMAAQ8F/wUAAfADAAEPAfADAAEPBf8FAAHwAwABBwHwAwABBwX/BQAB8AMA
+        AQcB8AMAAQcF/wUAAeADAAEHAeADAAEHAf4DAAE/BQAB4AMAAQMB4AMAAQMB+AMAAQ8FAAHgAwABAwHg
+        AwABAwHwAwABBwUAAeADAAEDAeADAAEDAfADAAEHBQAB4AMAAQMB4AMAAQMB4AMAAQMFAAHgAwABAwHg
+        AwABAwHgAwABAwUAAeADAAEDAeADAAEDAeADAAEDBQAB4AMAAQMB4AMAAQMB4AMAAQMFAAHgAwABAwHg
+        AwABAwHgAwABAwUAAeADAAEDAeADAAEDAfADAAEHBQAB4AMAAQcB4AMAAQcB8AMAAQcFAAHwAwABBwHw
+        AwABBwH4AwABDwUAAfADAAEHAfADAAEHAfwDAAE/BQAB8AMAAQ8B8AMAAQ8F/wUAAfgDAAEPAfgDAAEP
+        Bf8FAAH4AwABHwH4AwABHwX/BQAB/AMAAT8B/AMAAT8F/wUAAf8DAAF/Af8DAAF/Bf8FAAH/AYACAAL/
+        AYACAAb/BQAB/wGAAgAC/wGAAgAG/wUAAf8BwAEAAQMC/wHAAQABAwb/BQAB/wHwAQABBwL/AfABAAEH
+        Bv8FAAH/Af4BAAE/Av8B/gEAAT8G/wUAD/8FAA//BQAP/wUACw==
 </value>
   </data>
+  <metadata name="kpStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>281, 25</value>
+  </metadata>
   <metadata name="kpStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>281, 25</value>
   </metadata>
