DimmerSystem #完成部分主页功能（打开工程等）

--- a/DimmerSystem/Properties/Resources.resx
+++ b/DimmerSystem/Properties/Resources.resx
@@ -367,6 +367,9 @@
   <data name="添加灯具_Press" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\添加灯具_Press.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="灯光图" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\灯光图.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="灯库编辑" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯库编辑.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
